plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    // Spring security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    // Postgresql
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.hibernate.validator:hibernate-validator'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    // Swagger
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0"

    // Jackson
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.4'

    // Email
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // QR
    implementation 'com.google.zxing:core:3.4.1'
    implementation 'com.google.zxing:javase:3.4.1'

    // PDF
    implementation 'com.itextpdf:itext7-core:7.2.2'

    // Thumbnailator
    implementation 'net.coobird:thumbnailator:0.4.14'

}

tasks.named('test') {
    useJUnitPlatform()
}
